Fix for @jayden2 issue #3000 - AKA, Jayden broke the site on Safari again :D

--- a/app/assets/stylesheets/partials/_footer.sass
+++ b/app/assets/stylesheets/partials/_footer.sass
@@ -1,6 +1,7 @@
 footer
 	margin: 0 !important
 	height: auto
+	min-height: 18vh //Min height needed for safari
 	margin-top: 5em !important
 	width: 100%
 	background-color: $grey-blue-primary
