--- a/app/assets/stylesheets/partials/_footer_mobile.sass
+++ b/app/assets/stylesheets/partials/_footer_mobile.sass
@@ -3,4 +3,13 @@
 // 
 // The following styles are for the footer
 
-//Mobile View
+// Tablet and large phone view
+@media only screen and (max-width: 991px) and (min-width: 432px)
+	footer
+		min-height: 15em
+
+// Small tiny iphone view
+@media only screen and (max-width: 431px)
+	footer
+		min-height: 20em
+		
